refactor: Categorize `constants`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
 		"baseUrl": ".",
 		"types": ["node", "vitest/globals"],
 		"paths": {
-			"#constants": ["./src/constants.ts"],
+			"#constants": ["./src/constants/index.ts"],
 			"#utils": ["./src/utils/index.ts"],
 			"#valibot": ["./src/valibot-extensions.ts"],
 		},
