--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
 		"@morev/stylelint-config": "^8.0.1",
 		"@morev/stylelint-testing-library": "^1.0.0",
 		"@release-it/conventional-changelog": "^9.0.1",
+		"@total-typescript/ts-reset": "^0.6.1",
 		"@types/node": "22",
 		"@types/postcss-resolve-nested-selector": "^0.1.3",
 		"@vitest/coverage-v8": "^3.2.2",
