--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
 			"#constants": ["./src/constants/index.ts"],
 			"#utils": ["./src/utils/index.ts"],
 			"#valibot": ["./src/valibot-extensions.ts"],
+			"~utils/*": ["./src/utils/*"],
 		},
 	},
 	"ts-node": {
