refactor: Change the project structure, split into separated modules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,12 +15,18 @@
 		"baseUrl": ".",
 		"types": ["node", "vitest/globals"],
 		"paths": {
-			"#types": ["./src/types/index.ts"],
-			"#test-utils": ["./src/test-utils/index.ts"],
-			"#constants": ["./src/constants/index.ts"],
-			"#utils": ["./src/utils/index.ts"],
-			"#valibot": ["./src/valibot-extensions.ts"],
-			"~utils/*": ["./src/utils/*"],
+			"#modules/shared": ["./src/modules/shared/index.ts"],
+			"#modules/shared/*": ["./src/modules/shared/*"],
+			"#modules/bem": ["./src/modules/bem/index.ts"],
+			"#modules/bem/*": ["./src/modules/bem/*"],
+			"#modules/postcss": ["./src/modules/postcss/index.ts"],
+			"#modules/postcss/*": ["./src/modules/postcss/*"],
+			"#modules/selectors": ["./src/modules/selectors/index.ts"],
+			"#modules/selectors/*": ["./src/modules/selectors/*"],
+			"#modules/rule-utils": ["./src/modules/rule-utils/index.ts"],
+			"#modules/rule-utils/*": ["./src/modules/rule-utils/*"],
+			"#modules/test-utils": ["./src/modules/test-utils/index.ts"],
+			"#modules/test-utils/*": ["./src/modules/test-utils/*"],
 		},
 	},
 	"ts-node": {
