--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
 		"postcss": "^8.5.6",
 		"postcss-scss": "^4.0.9",
 		"release-it": "^19.0.4",
+		"sass": "^1.90.0",
 		"stylelint": "^16.23.0",
 		"stylelint-selector-bem-pattern": "^4.0.1",
 		"tsup": "^8.5.0",
