--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@morev/stylelint-plugin",
-	"description": "Template repository to start projects with",
+	"description": "Stylelint rules for BEM and SCSS best practices",
 	"type": "module",
 	"private": true,
 	"version": "0.0.0",
@@ -22,6 +22,8 @@
 		"url": "https://github.com/MorevM/stylelint-plugin"
 	},
 	"keywords": [
+		"bem",
+		"scss",
 		"stylelint",
 		"stylelint-plugin"
 	],
