--- a/package.json
+++ b/package.json
@@ -61,8 +61,8 @@
 	},
 	"dependencies": {
 		"@morev/utils": "^3.13.1",
+		"postcss": "^8.5.6",
 		"postcss-selector-parser": "^7.1.0",
-		"regexp-match-indices": "^1.0.2",
 		"valibot": "^1.1.0"
 	},
 	"devDependencies": {
@@ -73,22 +73,19 @@
 		"@release-it/conventional-changelog": "^9.0.1",
 		"@total-typescript/ts-reset": "^0.6.1",
 		"@types/node": "22",
-		"@types/postcss-resolve-nested-selector": "^0.1.3",
 		"@vitest/coverage-v8": "^3.2.4",
 		"eslint": "9.32.0",
 		"lefthook": "^1.12.2",
-		"postcss": "^8.5.6",
 		"postcss-scss": "^4.0.9",
 		"release-it": "^19.0.4",
 		"sass": "^1.90.0",
 		"stylelint": "^16.23.0",
-		"stylelint-selector-bem-pattern": "^4.0.1",
 		"tsup": "^8.5.0",
 		"tsx": "^4.19.4",
 		"typescript": "^5.8.3",
+		"unplugin-vue-components": "^29.0.0",
 		"vite-tsconfig-paths": "^5.1.4",
 		"vitepress": "^1.6.3",
-		"vitest": "3.2.4",
-		"zod": "^3.25.56"
+		"vitest": "3.2.4"
 	}
 }
