--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,11 @@
 				"command": "yarn build",
 			},
 			{
+				"name": "Generate meta",
+				"singleInstance": true,
+				"command": "yarn generate-meta",
+			},
+			{
 				"name": "Restart stylelint",
 				"useVsCodeApi": true,
 				"command": "stylelint.restart",
