--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
 		"lefthook": "^1.12.2",
 		"postcss-scss": "^4.0.9",
 		"release-it": "^19.0.4",
-		"sass": "^1.90.0",
+		"sass-embedded": "^1.90.0",
 		"stylelint": "^16.23.0",
 		"tsup": "^8.5.0",
 		"tsx": "^4.20.4",
