--- a/package.json
+++ b/package.json
@@ -40,6 +40,16 @@
 				"types": "./dist/index.d.cts",
 				"default": "./dist/index.cjs"
 			}
+		},
+		"./constants": {
+			"import": {
+				"types": "./dist/constants.d.ts",
+				"default": "./dist/constants.js"
+			},
+			"require": {
+				"types": "./dist/constants.d.cts",
+				"default": "./dist/constants.cjs"
+			}
 		}
 	},
 	"main": "./dist/index.cjs",
