--- a/package.json
+++ b/package.json
@@ -56,17 +56,17 @@
 	"module": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"scripts": {
-		"prepare": "yarn generate-meta && lefthook install",
+		"prepare": "pnpm generate-meta && lefthook install",
 		"test": "vitest",
 		"test:dev": "vitest --watch --reporter=dot",
-		"lint": "yarn lint:eslint && yarn lint:stylelint",
-		"lint:fix": "yarn lint:eslint:fix && yarn lint:stylelint:fix",
+		"lint": "pnpm lint:eslint && pnpm lint:stylelint",
+		"lint:fix": "pnpm lint:eslint:fix && pnpm lint:stylelint:fix",
 		"lint:eslint": "eslint \"**/*.{js,ts,vue,json,json5,jsonc,yml,yaml,md}\"",
 		"lint:eslint:fix": "eslint \"**/*.{js,ts,vue,json,json5,jsonc,yml,yaml,md}\" --fix",
 		"lint:stylelint": "stylelint \"**/*.{css,scss}\" --allow-empty-input",
 		"lint:stylelint:fix": "stylelint \"**/*.{css,scss}\" --fix --allow-empty-input",
-		"docs:dev": "yarn generate-meta && vitepress dev docs",
-		"build": "yarn generate-meta && rm -rf dist && tsup",
+		"docs:dev": "pnpm generate-meta && vitepress dev docs",
+		"build": "pnpm generate-meta && rm -rf dist && tsup",
 		"release": "release-it --disable-metrics",
 		"generate-meta": "tsx src/modules/meta/generate.ts"
 	},
