--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,26 +7,29 @@ on:
     branches: [master]
 
 jobs:
-  lint-and-test:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+
+      - name: Setup PNPM
+        uses: pnpm/action-setup@v4
 
       - name: Setup Node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
-          node-version: '16'
-          cache: yarn
+          node-version: '22'
+          cache: pnpm
 
       - name: Install dependencies
-        run: yarn install
+        run: pnpm install --frozen-lockfile
 
       - name: Linting
-        run: yarn lint
+        run: pnpm run lint
 
       - name: Testing
-        run: yarn test
+        run: pnpm run test
 
       - name: Build
-        run: yarn build
+        run: pnpm run build
