--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,29 +4,35 @@ on:
   push:
     tags: [v*]
 
+permissions:
+  contents: write
+
 jobs:
   release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout the repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+
+      - name: Setup PNPM
+        uses: pnpm/action-setup@v4
 
       - name: Setup Node
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
         with:
-          node-version: '16'
-          cache: yarn
+          node-version: '22'
+          cache: pnpm
           scope: '@morev'
           registry-url: https://registry.npmjs.org
 
       - name: Install dependencies
-        run: yarn install
+        run: pnpm install --frozen-lockfile
 
       - name: Linting
-        run: yarn lint
+        run: pnpm lint
 
       - name: Testing
-        run: yarn test
+        run: pnpm test
 
       - name: Getting latest changelog entry
         uses: actions/github-script@v7
@@ -45,6 +51,6 @@ jobs:
           body: ${{steps.latest-changelog-entry.outputs.result}}
 
       - name: Publish package
-        run: yarn publish --access public
+        run: pnpm publish --access public --no-git-checks
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
