--- a/.release-it.yaml
+++ b/.release-it.yaml
@@ -9,6 +9,7 @@ npm:
 plugins:
   '@release-it/conventional-changelog':
     infile: CHANGELOG.md
+    header: '# Changelog'
     preset:
       name: conventionalcommits
       types:
