--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
 		"@morev/utils": "^3.13.1",
 		"postcss": "^8.5.6",
 		"postcss-selector-parser": "^7.1.0",
+		"postcss-value-parser": "^4.2.0",
 		"valibot": "^1.1.0"
 	},
 	"devDependencies": {
