--- a/.codecov.yml
+++ b/.codecov.yml
@@ -12,9 +12,12 @@ coverage:
       default:
         target: auto
         threshold: 2%
+        informational: false
     patch:
       default:
         target: 90%
+        threshold: 0%
+        informational: false
 
 comment:
   layout: diff, flags, files
