--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
 		"valibot": "^1.1.0"
 	},
 	"devDependencies": {
+		"@cspell/dict-ru_ru": "^2.3.2",
 		"@morev/commitlint-config": "^0.2.2",
 		"@morev/eslint-config": "^40.0.0",
 		"@morev/stylelint-config": "^8.0.1",
@@ -91,6 +92,7 @@
 		"@total-typescript/ts-reset": "^0.6.1",
 		"@types/node": "22",
 		"@vitest/coverage-v8": "^3.2.4",
+		"cspell": "^9.2.1",
 		"eslint": "9.34.0",
 		"lefthook": "^1.12.2",
 		"postcss-scss": "^4.0.9",
