--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		"prepare": "pnpm generate-meta && lefthook install",
 		"test": "vitest",
 		"typecheck": "tsc --noEmit",
+		"spellcheck": "cspell --no-progress --show-suggestions --unique",
 		"test:dev": "vitest --watch --reporter=dot",
 		"lint": "pnpm lint:eslint && pnpm lint:stylelint",
 		"lint:fix": "pnpm lint:eslint:fix && pnpm lint:stylelint:fix",
