chore: Add spellcheck in `.lefthook.yaml`

--- a/.lefthook.yaml
+++ b/.lefthook.yaml
@@ -7,6 +7,9 @@ commit-msg:
 pre-commit:
   parallel: true
   commands:
+    cspell:
+      skip: [merge, rebase]
+      run: pnpm run -s spellcheck -- {staged_files}
     eslint:
       glob: '*.{js,ts,json,json5,jsonc,yml,yaml,md}'
       skip: [merge, rebase]
