ci: Add spellchecker to Github actions

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -30,6 +30,9 @@ jobs:
       - name: Typecheck
         run: pnpm typecheck
 
+      - name: Spellcheck
+        run: pnpm spellcheck
+
       - name: Linting
         run: pnpm lint
 
