--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -33,6 +33,9 @@ jobs:
       - name: Typecheck
         run: pnpm typecheck
 
+      - name: Spellcheck
+        run: pnpm spellcheck
+
       - name: Build
         run: pnpm build
 
