--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,36 +11,38 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build:
+  typecheck:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v5
-        with:
-          fetch-depth: 2
-
-      - name: Setup PNPM
-        uses: pnpm/action-setup@v4
-        with:
-          version: 10
-
-      - name: Setup Node
-        uses: actions/setup-node@v5
-        with:
-          node-version: 22
-          cache: pnpm
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
+      - name: Setup
+        uses: ./.github/actions/setup
 
       - name: Typecheck
         run: pnpm typecheck
 
+  spellcheck:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup
+        uses: ./.github/actions/setup
+
       - name: Spellcheck
         run: pnpm spellcheck
 
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup
+        uses: ./.github/actions/setup
+
       - name: Linting
         run: pnpm lint
+
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup
+        uses: ./.github/actions/setup
 
       - name: Testing
         run: pnpm test --coverage
@@ -49,6 +51,13 @@ jobs:
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+
+  build:
+    needs: [spellcheck, typecheck, lint, test]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup
+        uses: ./.github/actions/setup
 
       - name: Build
         run: pnpm build
