ci: Use `actions/checkout` before custom actions
:\

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,7 +14,10 @@ jobs:
   typecheck:
     runs-on: ubuntu-latest
     steps:
-      - name: Setup
+      - name: Checkout the repository
+        uses: actions/checkout@v5
+
+      - name: Setup environment
         uses: ./.github/actions/setup
 
       - name: Typecheck
@@ -23,7 +26,10 @@ jobs:
   spellcheck:
     runs-on: ubuntu-latest
     steps:
-      - name: Setup
+      - name: Checkout the repository
+        uses: actions/checkout@v5
+
+      - name: Setup environment
         uses: ./.github/actions/setup
 
       - name: Spellcheck
@@ -32,7 +38,10 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
-      - name: Setup
+      - name: Checkout the repository
+        uses: actions/checkout@v5
+
+      - name: Setup environment
         uses: ./.github/actions/setup
 
       - name: Linting
@@ -41,7 +50,12 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - name: Setup
+      - name: Checkout the repository
+        uses: actions/checkout@v5
+        with:
+          fetch-depth: 2
+
+      - name: Setup environment
         uses: ./.github/actions/setup
 
       - name: Testing
@@ -56,7 +70,10 @@ jobs:
     needs: [spellcheck, typecheck, lint, test]
     runs-on: ubuntu-latest
     steps:
-      - name: Setup
+      - name: Checkout the repository
+        uses: actions/checkout@v5
+
+      - name: Setup environment
         uses: ./.github/actions/setup
 
       - name: Build
