--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -18,7 +18,10 @@ jobs:
   publish-docs:
     runs-on: ubuntu-latest
     steps:
-      - name: Setup
+      - name: Checkout the repository
+        uses: actions/checkout@v5
+
+      - name: Setup environment
         uses: ./.github/actions/setup
 
       - name: Build docs
