--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,6 +14,9 @@ jobs:
   temp-changelog:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout the repository
+        uses: actions/checkout@v5
+
       - name: Getting latest changelog entry
         uses: actions/github-script@v7
         id: latest-changelog-entry
