--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 	"license": "MIT",
 	"publishConfig": {
 		"access": "public",
-		"registry": "https://registry.npmjs.org/"
+		"registry": "https://registry.npmjs.org/",
+		"provenance": true
 	},
 	"author": {
 		"name": "Maxim Morev",
