--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,6 +3,7 @@ updates:
   - package-ecosystem: npm
     directory: '/'
     schedule: { interval: weekly, day: saturday }
+    cooldown: { default-days: 5, exclude: ['@morev/*'] }
     versioning-strategy: increase
     allow: [dependency-type: production]
     assignees: [MorevM]
